--- a/src/style.css
+++ b/src/style.css
@@ -19,5 +19,5 @@
   align-items: center;
   justify-content: start;
   min-height: 100vh;
-  background-color: #f0f0f0;
+  background-image: repeating-linear-gradient(90deg, hsla(253,0%,96%,0.05) 0px, hsla(253,0%,96%,0.05) 1px,transparent 1px, transparent 104px),repeating-linear-gradient(0deg, hsla(253,0%,96%,0.05) 0px, hsla(253,0%,96%,0.05) 1px,transparent 1px, transparent 104px),repeating-linear-gradient(0deg, hsla(253,0%,96%,0.07) 0px, hsla(253,0%,96%,0.07) 1px,transparent 1px, transparent 26px),repeating-linear-gradient(90deg, hsla(253,0%,96%,0.07) 0px, hsla(253,0%,96%,0.07) 1px,transparent 1px, transparent 26px),linear-gradient(45deg, rgb(33,39,51),rgb(33,39,51)); 
 }
